# Soul_lang_rust

./: .gitignore  Cargo.toml  List.soul  README.md  map.soul  parserTest.soul  subfile_idea.md  test.soul  test_BIGBOY_Jun-13-181613-2025_Conflict.soul  todo.md
benches/: my_benchmark.rs
hsoul/: Cargo.toml
hsoul/src/: lib.rs  main.rs  read_sub_tree.rs  serde_sub_tree.rs  subfile_tree.rs
my_macros/: Cargo.toml
my_macros/src/: lib.rs
output/: abstractSyntaxTree.soul  metaData_scopes.soul  out.cpp  tokenizer.soul  tokenizer.txt
output/soul_hardCodedFunctions/: soul_hardCodedFunctions.h  test.cpp
output/soul_hardCodedFunctions/subLib/: soul_cppLibs.h  soul_print.hpp
soul_lib/: Assert.soul  List.soul  Range.soul  cachable.soul  getWords.soul  map.soul  testFuture.soul
soul_src/: book.hsoul  header.soul  main.soul
soul_src/std/: book.hsoul  otherTest.soul  test.soul
soul_src/test/: LifeTimeChecker.soul  book.hsoul  conditional.soul  enumLike.soul  objects.soul  sub.soul
src/: cache_file.rs  code_generate.rs  file_cache.rs  generate_code_files.rs  increments.rs  lib.rs  main.rs  run_compiler.rs  run_interpreter.rs  run_steps.rs  soul_names.rs
src/abstract_styntax_tree/: abstract_styntax_tree.rs  assign_type.rs  mod.rs  operator_type.rs
src/abstract_styntax_tree/get_abstract_syntax_tree/: get_abstract_syntax_tree.rs  get_body.rs  get_function_body.rs  mod.rs  multi_stament_result.rs
src/cpp_transpiller/: cpp_type.rs  cpp_writer.rs  mod.rs  namespace.rs  transpiller.rs
src/cpp_transpiller/convert_to_cpp/: expression_to_cpp.rs  mod.rs  (+2 more)
src/errors/: mod.rs  soul_error.rs
src/meta_data/: c_string_store.rs  internal_functions_headers.rs  key_tokens.rs  meta_data.rs  mod.rs  soul_names.rs  type_meta_data.rs  type_store.rs
src/run_options/: mod.rs  run_options.rs  show_output.rs  show_times.rs
src/steps/: mod.rs
src/tokenizer/: file_line.rs  mod.rs  test.rs  token.rs  tokenize_tests.rs  tokenizer.rs
src/utils/: logger.rs  mod.rs  multi_ref.rs  name_type.rs  naming_propertys.rs  node_ref.rs  push.rs  serde_multi_ref.rs  show_diff.rs  split_on.rs  time_logs.rs
(+206 files in other folders)
