[profile.dev]
opt-level = 2
debug = true

[package]
name = "Soul_lang_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.9.0"
criterion = { version = "0.6.0", features = ["html_reports"] }
enum-iterator = "2.1.0"
itertools = "0.14.0"
lazy_static = "1.4.0"
num-traits = "0.2.19"
once_cell = "1.21.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bench]]
name = "my_benchmark"
harness = false

[features]
throw_result = []
