[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = true

[package]
name = "soul_lang_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
criterion = { version = "0.6.0", features = ["html_reports"] }
enum-iterator = "2.1.0"
itertools = "0.14.0"
num-traits = "0.2.19"
once_cell = "1.21.3"
ordered-float = { version = "5.0.0", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
bincode = "1.3"
ego-tree = { version = "0.10.0", features = ["serde"] }
threadpool = "1.8.1"
hsoul = { path = "hsoul" }
chrono = "0.4.41"
colored = "3.0.0"
erased-serde = "0.4.6"
my_macros = {path = "my_macros" }

[[bench]]
name = "my_benchmark"
harness = false

[features]
throw_result = []
dev_mode = []
