[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = false

[package]
name = "soul_lang_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
chrono = "0.4.41"
colored = "3.0.0"
bitflags = "2.9.0"
itertools = "0.14.0"
once_cell = "1.21.3"
threadpool = "1.8.1"
num-traits = "0.2.19"
serde_json = "1.0.140"
enum-iterator = "2.1.0"
hsoul = { path = "hsoul" }
serde = { version = "1.0.219", features = ["derive"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
criterion = { version = "0.6.0", features = ["html_reports"] }
bincode = "2.0.1"

[[bench]]
name = "my_benchmark"
harness = false

[features]
throw_result = []
dev_mode = []
